--- a/themes/maverick/layouts/index.html
+++ b/themes/maverick/layouts/index.html
@@ -7,12 +7,13 @@
     <div class="content">
       {{ partial "header.html" . }}
       {{ .Content }}
-      {{ if gt (len ( where .Site.RegularPages "Section" "posts" )) 0 }}
-      <h1>Latest Post</h1>
+      {{ if gt (len ( where .Site.RegularPages "Section" "in" (slice "posts" "notes") )) 0 }}
+      <h1>Latest Posts</h1>
       <section>
-        {{ range (first .Site.Params.items (where .Site.RegularPages "Section" "posts" ).ByDate.Reverse) }}
+        {{ range (first .Site.Params.items (where .Site.RegularPages "Section" "in" (slice "posts" "notes") ).ByDate.Reverse) }}
           <p>
             <time class="g time" datetime="{{ dateFormat "2006-01-02" .Date }}">{{ dateFormat "2006-01-02" .Date }}</time>&nbsp;
+            <span class="section">[{{ .Section }}]</span>&nbsp;
             <a href="{{ .Permalink }}">{{ .Title }}</a>
           <p>
         {{ end }}
