--- a/themes/maverick/layouts/404.html
+++ b/themes/maverick/layouts/404.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="{{ .Site.Language.Lang }}">
   {{ partial "head.html" . }}
 <body>
   <a class="skip-link" href="#main">Skip to main</a>
 <main id="main">
   <div class="content">
     {{ partial "header.html" . }}
-    <p>The page you requested doesn't exist.</p>
+    <h1>{{ i18n "error_404" }}</h1>
+    <p>{{ i18n "error_404_message" }}</p>
+    <p><a href="{{ .Site.BaseURL }}">{{ i18n "back_to_home" }}</a></p>
   </div>
 </main>
 </body>
